5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1764_1183.log
== TEST (2019-05-28 17:11:17) 
-- CODE:
from numpy import*
v=array(eval("vetor: "))
c=0
a=zeros
while(c<size(a)):
	if(v[c]>0):
		a[c]=v[c]
	c=c+1
print(a)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:11:39) 
-- CODE:
from numpy import*
v=array(eval("vetor: "))
c=0
a=zeros
while(c<size(a)):
	if(v[c]>0):
		a[c]=v[c]
	c=c+1
print(a)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:12:34) 
-- CODE:
from numpy import*
v=array(eval(input("vetor: ")))
c=0
a=zeros
while(c<size(a)):
	if(v[c]>0):
		a[c]=v[c]
	c=c+1
print(a)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:14:51) 
-- CODE:
from numpy import*
v=array(eval(input("vetor: ")))
c=0
a=zeros
while(c<size(a)):
	if(v[c]>0):
		a[c]=v[c]+a[c]
	c=c+1
print(a)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:18:11) 
-- CODE:
from numpy import*
v=array(eval(input("vetor: ")))
c=0
a=zeros
while(c<size(a)):
	if(v[c]>0):
		a[c]+=v[c]
	c=c+1
print(a)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:49:08) 
-- CODE:
from numpy import*
v=array(eval(input("vetor: ")))
c=0
a=zeros(N-1)
while(c<size(a)):
	if(v[c]>0):
		a[c]=a[c]+v[c]
	c=c+1
print(a)
while()
-- ERROR:
File "XXXX", line 10
    while()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:49:19) 
-- CODE:
from numpy import*
v=array(eval(input("vetor: ")))
c=0
a=zeros(N-1)
while(c<size(a)):
	if(v[c]>0):
		a[c]=a[c]+v[c]
	c=c+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:49:53) 
-- CODE:
from numpy import*
v=array(eval(input("vetor: ")))
c=0
a=zeros
while(c<size(a)):
	if(v[c]>0):
		a[c]=a[c]+v[c]
	c=c+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:51:01) 
-- CODE:
from numpy import*
v=array(eval(input("vetor: ")))
c=0
a=zeros
while(c<size(a)):
	if(v[c]>0):
		a=a+v
	c=c+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:16:25) 
-- CODE:
from numpy import*
v=array(eval(input("vetor: ")))
c=0
a=0
while(c<size(v)):
	if(v[c]>=0):
		a=a+1
	c=c+1
a=a
pe=0
ps=0
z=zeros(a, dtype=int)
while(pe<size(v)):
	if(v[pe]>=0):
		z[ps]=z[pe]
		pe=pe+1
		ps=ps+1
	else:
		pe=pe+1
		ps=ps+1
print(z)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:17:31) 
-- CODE:
from numpy import*
v=array(eval(input("vetor: ")))
c=0
a=0
while(c<size(v)):
	if(v[c]>=0):
		a=a+1
	c=c+1
a=a
pe=0
ps=0
z=zeros(a, dtype=int)
while(pe<size(v)):
	if(v[pe]>=0):
		z[ps]=v[pe]
		pe=pe+1
		ps=ps+1
	else:
		pe=pe+1
		ps=ps+1
print(z)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:18:12) 
-- CODE:
from numpy import*
v=array(eval(input("vetor: ")))
c=0
a=0
while(c<len(v)):
	if(v[c]>=0):
		a=a+1
	c=c+1
a=a
pe=0
ps=0
z=zeros(a, dtype=int)
while(pe<len(v)):
	if(v[pe]>=0):
		z[ps]=v[pe]
		pe=pe+1
		ps=ps+1
	else:
		pe=pe+1
		ps=ps+1
print(z)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:21:07) 
-- CODE:
from numpy import*
v=array(eval(input("vetor: ")))
i=0
z=0
while(i<len(v)):
	if(v[i]>=0):
		z=z+1
	i=i+1
z=z
pe=0
ps=0
vs=zeros(z, dtype=int)
while(pe<len(v)):
	if(v[pe]>=0):
		vs[ps]=v[pe]
		pe=pe+1
		ps=ps+1
	else:
		pe=pe+1
		ps=ps
print(vs)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:21:22) 
-- CODE:
from numpy import*
v=array(eval(input("vetor: ")))
i=0
z=0
while(i<len(v)):
	if(v[i]>=0):
		z=z+1
	i=i+1
z=z
pe=0
ps=0
vs=zeros(z, dtype=int)
while(pe<len(v)):
	if(v[pe]>=0):
		vs[ps]=v[pe]
		pe=pe+1
		ps=ps+1
	else:
		pe=pe+1
		ps=ps
print(vs)		
-- EXECUTION TIME:
0.427898
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:16:43) 
-- CODE:
from numpy import*
v=array(eval(input("vetor: ")))
i=0
z=0
while(i<len(v)):
	if(v[i]>=0):
		z=z+1
	i=i+1
z=z
pe=0
ps=0
vs=zeros(z, dtype=int)
while(pe<size(v)):
	if(v[pe]>=0):
		vs[ps]=v[pe]
		pe=pe+1
		ps=ps+1
	else:
		pe=pe+1
		ps=ps
print(vs)		
-- EXECUTION TIME:
0.397449
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
